# datalake-ufba

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml
.dvc/: config
data/raw/academico/: .gitignore
data/raw/sisu/: .gitignore
data/raw/socioeconomico/: .gitignore
datalake_ufba/: sql.py  utils.py
datalake_ufba/bronze/: academic.py  sisu.py  socioeconomic.py
datalake_ufba/fetch/: download.py  extract.py
db/: ufba.duckdb.dvc
sql/: ufba_bronze_tables.sql
sql/bronze_tables/: academic.sql  sisu.sql  socioeconomic.sql
taskfiles/: bronze.taskfile.yml  fetch.taskfile.yml  poetry.taskfile.yml  sql.taskfile.yml
